--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -353,10 +353,10 @@
                     <table id="betterby" border="0" cellpadding="0" cellspacing="0" style="max-width:100%;min-width:100%;border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" width="100%">
                       <tr>
                         <td valign="top" align="left" class="mcnTextContent darkmodecream" style="padding-left:5.5%;padding-top:50px;padding-bottom:28px;line-height:100%;background-color:#F3EFDF;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                          <img id="betterby_img" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/dd217b97-66dd-480a-a46a-8528d001c360.png" alt="">
+                          <img id="betterby_img" width="211" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/dd217b97-66dd-480a-a46a-8528d001c360.png" alt="">
                         </td>
                         <td valign="top" align="right" class="mcnTextContent darkmodecream" style="text-align:right;padding-right:5.5%;padding-top:50px;padding-bottom:28px;line-height:100%;background-color:#F3EFDF;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                          <img id="betterby_logo" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/8f8bf759-9aab-4dd9-bfef-fe2aca5f9ebe.png" alt="">
+                          <img id="betterby_logo" width="48" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/8f8bf759-9aab-4dd9-bfef-fe2aca5f9ebe.png" alt="">
                         </td>
                       </tr>
                     </table>
@@ -514,7 +514,7 @@
 					            Want to dig deeper?</p>
                     </td>
                     <td id="chat-link" valign="top" style="padding-bottom:0px;padding-top:75px;padding-left:32px; padding-right: 30px; vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                      <a class="link" style="color:#000;text-decoration:none;border-bottom:1px solid #000;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://officeofexperience.com/case-studies/tate-and-lyle">LET'S CHAT</a>
+                      <a class="link" style="color:#000;text-decoration:none;border-bottom:1px solid #000;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://officeofexperience.com/#contact-us">LET'S CHAT</a>
                     </td>
                   </tr>
                 </tbody>
@@ -603,7 +603,7 @@
                     <td style="padding:32px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                       <p style="font-family:'Suisse Regular', Helvetica, Arial, sans-serif;font-size:12px;line-height:24px;color:#827F74;border-top:1px solid #c4c4c4;padding-top:16px;letter-spacing:normal;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                         This email is WCAG 2.0 compliant.<br>
-                        © 2020 Office of Experience. <span class="nobr">All Rights Reserved.</span> <span class="nobr"><a href="https://officeofexperience.com/privacy-policy" style="color:#827F74;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Privacy Policy.</a></span>
+                        © 2021 Office of Experience. <span class="nobr">All Rights Reserved.</span> <span class="nobr"><a href="https://officeofexperience.com/privacy-policy" style="color:#827F74;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Privacy Policy.</a></span>
                       </p>
                     </td>
                   </tr>
