--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -189,8 +189,12 @@
 			padding-left:0!important;
 		}
 
-		#betterby_img, #betterby_logo {
-			width:inherit!important;
+		#betterby_img {
+      width: 211px!important;
+    }
+    
+     #betterby_logo {
+			width:48px!important;
 		}
 		
 		#contact {
