--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -374,14 +374,14 @@
                   </td>
                 </tr>
                 <tr>
-                  <td valign="top" style="padding:0 32px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" colspan="2">
+                  <td valign="top" style="padding-left:32px; padding-right:32px; padding-top: 0; padding-bottom: 20px; vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" colspan="2">
                     <p style="margin-top:28px;padding-right:128px;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:21px;line-height:30px;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                       Looking ahead to how one year’s lessons can yield another’s successes.
                     </p>
                   </td>
                 </tr>
                 <tr>
-                  <td id="read-medium" valign="top" style="padding-bottom:50px;padding-top:28px;padding-left:32px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" colspan="2">
+                  <td id="read-medium" valign="top" style="padding-bottom:63px;padding-top:22px;padding-left:32px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" colspan="2">
                     <a class="link" style="background-color:#F3EFDF; border-radius: 6px; border: 1px solid #000; padding: 15px 10px;color:#000;text-decoration:none;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:17px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://medium.com/better-by/how-can-2021-be-better-by-design-afe80784c128">READ IT ON MEDIUM</a>
                   </td>
                 </tr>
