--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -113,9 +113,13 @@
 			overflow: visible;
 		}
 
-		#case-study, #read-medium {
+		#read-medium {
 			padding-top: 20px!important;
 		}
+
+    #case-study {
+      padding-top: 4px!important;
+    }
 
 		#instagram-section {
 			background-image: url("https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/fc77bc61-428c-4e3c-b997-f0e537d96373.png") !important;
@@ -273,6 +277,10 @@
     #bookmark-image {
       padding-bottom: 0!important;
     }
+
+    #looking-ahead-column {
+      padding-bottom: 10px!important;
+    }
 	
 	}
 
@@ -373,7 +381,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td valign="top" style="padding-left:32px; padding-right:32px; padding-top: 0; padding-bottom: 20px; vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" colspan="2">
+                  <td id="looking-ahead-column" valign="top" style="padding-left:32px; padding-right:32px; padding-top: 0; padding-bottom: 20px; vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" colspan="2">
                     <p style="margin-top:28px;padding-right:128px;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:21px;line-height:30px;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                       Looking ahead to how one year’s lessons can yield another’s successes.
                     </p>
