--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -527,7 +527,7 @@
 					            Want to dig deeper?</p>
                     </td>
                     <td id="chat-link" valign="top" style="padding-bottom:0px;padding-top:75px;padding-left:32px; padding-right: 30px; vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                      <a class="link" style="color:#000;text-decoration:none;border-bottom:1px solid #000;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://officeofexperience.com/#contact-us">LET'S CHAT</a>
+                      <a class="link" style="color:#000;text-decoration:none;border-bottom:1px solid #000;mso-border-bottom-alt:1px solid #000;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://officeofexperience.com/#contact-us">LET'S CHAT</a>
                     </td>
                   </tr>
                 </tbody>
@@ -542,7 +542,7 @@
                   <td id="jeff" valign="middle" width="50%" style="padding-left:32px;padding-right:32px;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                     <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/8fd8dae7-7b41-4e11-8f05-d3a2c09d4de5.png" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                     <p style="color:#FFFFFF;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:28px;font-style:normal;font-weight:normal;line-height:36px;text-align:left;margin:28px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Jeff Woelker joins OX as Director of Digital Marketing</p>
-                    <a class="link" style="color:#fff;text-decoration:none;border-bottom:1px solid #fff;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://www.linkedin.com/posts/theofficeofexperience_newhire-digital-marketing-activity-6754825370245107712-aTMD/">GET TO KNOW HIM</a>
+                    <a class="link" style="color:#fff;text-decoration:none;border-bottom:1px solid #fff;mso-border-bottom-alt:1px solid #fff;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://www.linkedin.com/posts/theofficeofexperience_newhire-digital-marketing-activity-6754825370245107712-aTMD/">GET TO KNOW HIM</a>
                   </td>
                   <td id="jeff_img" width="50%" style="text-align:right;padding-right:32px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                     <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/d211f578-e3c3-4ddc-8e14-437a7720f0de.png" width="95%" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
@@ -550,7 +550,7 @@
                   <td id="jeff_duplicate" valign="middle" width="100%" style="display:none;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                     <img id="linkedin-icon-mobile" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/8fd8dae7-7b41-4e11-8f05-d3a2c09d4de5.png" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                     <p style="color:#FFFFFF;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:28px;font-style:normal;font-weight:normal;line-height:36px;text-align:left;margin:28px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Jeff Woelker joins OX as Director of Digital Marketing</p>
-                    <a class="link" style="color:#fff;text-decoration:none;border-bottom:1px solid #fff;font-family:'Space Mono', monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://www.linkedin.com/posts/theofficeofexperience_newhire-digital-marketing-activity-6754825370245107712-aTMD/">GET TO KNOW HIM</a>
+                    <a class="link" style="color:#fff;text-decoration:none;border-bottom:1px solid #fff;font-family:'Space Mono',monospace;letter-spacing:1.871px;line-height:18px;font-size:16px;padding-bottom:3px;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" href="https://www.linkedin.com/posts/theofficeofexperience_newhire-digital-marketing-activity-6754825370245107712-aTMD/">GET TO KNOW HIM</a>
                   </td>
                 </tr>
              
