--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -434,7 +434,7 @@
                           <span style="font-weight: 600;">UX // </span> The site mapped clear paths to conversion, regardless of where users were in their consideration journey.</p>
                   </td>
                   <td class="spectrum-image" width="100%" style="text-align:right;padding-right:16px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%">
-                    <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/c52527d2-33c4-4098-b12f-b056173c5351.png" width="100%" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
+                    <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/c52527d2-33c4-4098-b12f-b056173c5351.png" width="284" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                   </td>
                   <td id="yoko_duplicate" valign="middle" width="100%" style="display:none;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                     <p id="ux-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><span style="font-weight: 600;">UX //</span> The site mapped clear paths to conversion, regardless of where users were in their consideration journey.</p>
@@ -442,7 +442,7 @@
                 </tr>
                 <tr id="sia">
                   <td class="spectrum-image" valign="middle" width="50%" style="padding-left:16px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                    <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/bf551ed7-1908-4afb-b350-893c9bda9c8d.png" width="100%" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
+                    <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/bf551ed7-1908-4afb-b350-893c9bda9c8d.png" width="284" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                   </td>
                   <td id="davey-header" width="50%" style="padding-left:16px;padding-right:32px;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                     <p id="design-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><span style="font-weight: 600;">Design //</span> A flexible system of templates and components became the first digital expression of the new brand.</p>
@@ -460,7 +460,7 @@
                     <p style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><span style="font-weight: 600;">Content //</span> A  new user-first voice took an outside-in approach to brand storytelling and product positioning.</p>
                   </td>
                   <td class="spectrum-image" width="100%" style="text-align:right;padding-right:16px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                    <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/fe25673e-db35-49ec-af8e-a7a03f564a30.png" width="100%" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
+                    <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/fe25673e-db35-49ec-af8e-a7a03f564a30.png" width="284" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;">
                   </td>
                   <td id="content_duplicate" valign="middle" width="100%" style="display:none;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                     <p id="content-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><span style="font-weight: 600;">Content //</span> A  new user-first voice took an outside-in approach to brand storytelling and product positioning.</p>
@@ -469,12 +469,10 @@
                 </tr>
                 <tr id="demand-row">
                   <td class="spectrum-image" valign="middle" width="50%" style="padding-left:16px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                    <img id="bookmark-image" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/5ecf529f-af56-4da3-a502-7f1db95abe5a.png" width="100%" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;padding-bottom: 50px;">
+                    <img id="bookmark-image" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/5ecf529f-af56-4da3-a502-7f1db95abe5a.png" width="284" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;padding-bottom: 50px;">
                   </td>
                   <td id="demand-column" width="50%" style="padding-left:16px;padding-right:32px;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                    <p id="demand-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;vertical-align:middle;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%"><span style= font-weight:600>Demand Gen //</span> The culmination of a user-focused experience led to a 32% increase in business conversion rate.
-                    </p>
-                    
+                    <p id="demand-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;vertical-align:middle;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%"><span style= font-weight:600>Demand Gen //</span> The culmination of a user-focused experience led to a 32% increase in business conversion rate.</p>
                   </td>
                 </tr>
               </tbody>
