Fix quotes on span style

--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -472,7 +472,7 @@
                     <img id="bookmark-image" src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/5ecf529f-af56-4da3-a502-7f1db95abe5a.png" width="284" alt="" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;padding-bottom: 50px;" />
                   </td>
                   <td id="demand-column" width="50%" style="padding-left:16px;padding-right:32px;vertical-align:middle;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                    <p id="demand-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;vertical-align:middle;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%"><span style= font-weight:600>Demand Gen //</span> The culmination of a user-focused experience led to a 32% increase in business conversion rate.</p>
+                    <p id="demand-p" style="color:#000;font-family:'Suisse Book', Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:26px;text-align:left;margin:10px 0;vertical-align:middle;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%"><span style="font-weight:600;">Demand Gen //</span> The culmination of a user-focused experience led to a 32% increase in business conversion rate.</p>
                   </td>
                 </tr>
               </tbody>
