close all br tags

--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -587,19 +587,19 @@
                       <img src="https://mcusercontent.com/f0c262661c7720bbbb8a691d9/images/a6143815-03d6-4fea-972d-223fa6911a19.png" width="230" alt="The Office of Experience" style="border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;" />
                       <p id="contact-p" style="font-weight:normal;font-size:21px;line-height:30px;color:#000;margin-bottom:15px;padding-top:16px;font-family:'Suisse Book', Helvetica, Arial, sans-serif;width:80%;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                         The Office of Experience is a design and digital innovation agency that helps companies excel at every point of interface with their customers. By integrating strategy, design and technology, we ensure that the brands and experiences of our clients operate as one, bridging expectation and reality to build value.
-                        <br>
-						<br>
+                        <br/>
+						<br/>
 						<span class="small">
-							+1 312-815-9610<br><a href="mailto:info@officeofexperience.com" style="color:#000;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">info@officeofexperience.com</a>
+							+1 312-815-9610<br/><a href="mailto:info@officeofexperience.com" style="color:#000;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">info@officeofexperience.com</a>
 						</span>
-                        <br>
+                        <br/>
                       </p>
                     </td>
                   </tr>
                   <tr>
                     <td style="padding:32px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
                       <p style="font-family:'Suisse Regular', Helvetica, Arial, sans-serif;font-size:12px;line-height:24px;color:#827F74;border-top:1px solid #c4c4c4;padding-top:16px;letter-spacing:normal;margin:10px 0;padding:0;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-                        This email is WCAG 2.0 compliant.<br>
+                        This email is WCAG 2.0 compliant.<br/>
                         © 2021 Office of Experience. <span class="nobr">All Rights Reserved.</span> <span class="nobr"><a href="https://officeofexperience.com/privacy-policy" style="color:#827F74;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Privacy Policy.</a></span>
                       </p>
                     </td>
@@ -666,10 +666,10 @@
                           <tr>
                             <td valign="top" class="mcnTextContent" style="padding-top:0;padding-right:18px;padding-bottom:9px;padding-left:18px;vertical-align:top;mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#656565;font-family:'Suisse Regular', Helvetica, Arial, sans-serif;font-size:12px;line-height:150%;text-align:center;">
                               <strong>Our mailing address is:</strong>
-                              <br>*|HTML:LIST_ADDRESS_HTML|* *|END:IF|*
-                              <br>
-                              <br>
-                              Want to change how you receive these emails?<br>
+                              <br/>*|HTML:LIST_ADDRESS_HTML|* *|END:IF|*
+                              <br/>
+                              <br/>
+                              Want to change how you receive these emails?<br/>
                               You can <a href="*|UPDATE_PROFILE|*" style="mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#656565;font-weight:normal;text-decoration:underline;">update your preferences</a>
                               or <a href="*|UNSUB|*" style="mso-line-height-rule:exactly;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#656565;font-weight:normal;text-decoration:underline;">unsubscribe from this list</a>.
                             </td>
