--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -9,16 +9,16 @@
       </o:OfficeDocumentSettings>
     </xml>
     <![endif]-->
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="color-scheme" content="only">
-	<meta name="supported-color-schemes" content="light">
+    <meta charset="UTF-8" />
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="color-scheme" content="only" />
+	<meta name="supported-color-schemes" content="light" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet" />
     <title>*|MC:SUBJECT|*</title>
     <!--[if !mso]>
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet" />
     <![endif]-->
     
   <style type="text/css">
