--- a/ox_newsletter_jan21.html
+++ b/ox_newsletter_jan21.html
@@ -517,21 +517,21 @@
                   <td class="fillertd">&nbsp;</td>
 
                   <td class="block-stats stats-padding" width="25%" valign="top" style="vertical-align: top;">
-                    <p id="first-stat" style="display: inline!important; margin: 0;  text-decoration:underline;">+3.5%</p>
+                    <p id="first-stat" style="display: inline!important; margin: 0; /* border-bottom: 2px solid black; /* margin-left:80px;*/ text-decoration:underline;">+3.5%</p>
                     <p class="block-stats" id="first-p" style=" margin: 0; margin-top: 14px; font-size: 18px;">average monthly visits</p>
                   </td>
 
                   <td class="fillertd">&nbsp;</td>
 
                   <td class="block-stats stats-padding" width="25%" valign="top" style="vertical-align: top;">
-                    <p style="display: inline!important; margin-left: 0; margin-top: 0; margin-bottom: 0; text-decoration:underline;">+32%</p>
+                    <p style="display: inline!important; /* margin-right: 20px;*/  margin-left: 0; margin-top: 0; margin-bottom: 0; /* border-bottom: 2px solid black; */ text-decoration:underline;">+32%</p>
                     <p class="block-stats" id="second-p" style=" margin: 0; margin-top: 14px; font-size: 18px;">conversion rate</p>
                   </td>
 
                   <td class="fillertd">&nbsp;</td>
 
                   <td class="block-stats stats-padding" width="25%" valign="top" style="vertical-align: top;">
-                    <p style="display: inline!important; margin: 0; text-decoration:underline;">+67%</p>
+                    <p style="display: inline!important; margin: 0; /* border-bottom: 2px solid black; /* margin-right: 40px; */ text-decoration:underline;">+67%</p>
                     <p class="block-stats" style="margin: 0; margin-top: 14px; font-size: 18px;">content engagement</p>
                   </td>
 
